<resources>
    <string name="app_name">SentimentalStorage</string>
    <string name="gift_giver_hint">Name of person who gave you the card</string>
    <string name="occasion_hint">What is the occasion?</string>
    <string name="date_received_hint">Date card received</string>
    <string name="save_card_button_text">Save Sentiment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="occasionTitle">Occasion:</string>
    <string name="giverTitle">From:</string>
    <string name="add_photo">Add Photo</string>
    <string name="save_sentiment_toast">Saved Sentiment</string>
    <string name="removed_card_toast">Removed Card</string>


    <!--Titles -->
    <string name="view_cards_title">View Cards</string>
    <string name="scan_photo_title">Scan Photo</string>
    <string name="create_sentiment_title">Create Sentiment</string>
    <string name="edit_sentiment_title">Edit Sentiment</string>
    <string name="done_button">Done</string>
    <string name="crop_photo_button">Crop Photo</string>
    <string name="edit">Edit</string>
</resources>